--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,16 @@
 </table>
 
 <script>
-  fetch("https://primary-production-e873.up.railway.app/webhook/e9b85b81-a4d8-47bb-816c-04716e2948ae")
+  fetch("/api/meta")
     .then(res => res.json())
     .then(data => {
       const tbody = document.querySelector("#adsTable tbody");
+      tbody.innerHTML = "";
+
+      if (!data || data.length === 0) {
+        tbody.innerHTML = "<tr><td colspan='5'>No data yet</td></tr>";
+        return;
+      }
 
       data.forEach(row => {
         const tr = document.createElement("tr");
@@ -54,12 +60,14 @@
           <td>${row.impressions}</td>
           <td>${row.clicks}</td>
           <td>₹${row.spend}</td>
-          <td>${row.ctr}</td>
+          <td>${row.ctr}%</td>
         `;
         tbody.appendChild(tr);
       });
     })
-    .catch(err => console.error("Error loading data", err));
+    .catch(err => {
+      console.error("Error loading data", err);
+    });
 </script>
 
 </body>
