Updated the JavaScript

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     setInterval(loadSummary, 60000);
   </script>
 
-  <script>
+  <!-- <script>
     fetch("/api/meta")
       .then(res => res.json())
       .then(response => {
@@ -134,7 +134,7 @@
       .catch(err => {
         console.error("Error loading data", err);
       });
-  </script>
+  </script> -->
 
 
 </body>
