Only Table on Home Page

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
         <div class="content-grid" id="dashboardContent">
 
             <!-- 1. KPI Cards -->
-            <section class="kpi-row">
+            <!-- <section class="kpi-row">
                 <div class="kpi-card">
                     <div class="icon-box blue"><i class="fas fa-wallet"></i></div>
                     <div class="kpi-info">
@@ -148,10 +148,10 @@
                         <small id="ctrChange" class="kpi-change">--</small>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 2. Charts Section -->
-            <section class="charts-row">
+            <!-- <section class="charts-row">
                 <div class="card chart-large">
                     <div class="card-header">
                         <h3><i class="fas fa-chart-bar"></i> Top Performing Ads - Spend vs Leads</h3>
@@ -175,10 +175,10 @@
                         <canvas id="pieChart"></canvas>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 2b. Additional Charts -->
-            <section class="charts-row">
+            <!-- <section class="charts-row">
                 <div class="card chart-medium">
                     <div class="card-header">
                         <h3><i class="fas fa-chart-line"></i> Performance Trend</h3>
@@ -195,10 +195,10 @@
                         <canvas id="roiChart"></canvas>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 3. Campaign Performance Comparison -->
-            <section class="campaign-comparison">
+            <!-- <section class="campaign-comparison">
                 <div class="card full-width">
                     <div class="card-header space-between">
                         <h3><i class="fas fa-balance-scale"></i> Campaign Performance Comparison</h3>
@@ -208,23 +208,23 @@
                             </select>
                         </div>
                     </div>
-                    <div class="campaign-grid" id="campaignGrid">
+                    <div class="campaign-grid" id="campaignGrid"> -->
                         <!-- JS Injected -->
-                    </div>
+                    <!-- </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 4. AI Insights & Recommendations -->
-            <section class="insights-row">
+            <!-- <section class="insights-row">
                 <div class="card full-width">
                     <div class="card-header">
                         <h3><i class="fas fa-brain"></i> AI Performance Analysis & Recommendations</h3>
                     </div>
-                    <div class="insights-container" id="aiInsights">
+                    <div class="insights-container" id="aiInsights"> -->
                         <!-- JS Injected Content -->
-                    </div>
+                    <!-- </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 5. Detailed Data Table -->
             <section class="table-row">
