Removed n8n fetching loader

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,7 @@
 
     <!-- Main Content Area -->
     <main class="main-wrapper">
-        <!-- Top Header (Removed for now) -->
-
-        <!-- Loading Overlay -->
-        <div id="loadingOverlay" class="loading-overlay">
-            <div class="spinner"></div>
-            <p>Retrieving Intelligence from n8n...</p>
-        </div>
+        <!-- Loading Overlay (Removed) -->
 
         <!-- Dashboard Grid (Table only) -->
         <div class="content-grid" id="dashboardContent">
