--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
                         <table class="data-table">
                             <thead>
                                 <tr>
-                                    <th class="sortable" onclick="sortTable('status')">Status <i
-                                            class="fas fa-sort"></i></th>
+                                    <!-- <th class="sortable" onclick="sortTable('status')">Status <i
+                                            class="fas fa-sort"></i></th> -->
                                     <th class="sortable" onclick="sortTable('ad_name')">Ad Name / Campaign <i
                                             class="fas fa-sort"></i></th>
                                     <th class="text-right sortable" onclick="sortTable('spend')">Spend <i
