--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
             </section>
 
             <!-- 2b. Additional Charts -->
-            <section class="charts-row">
+            <!-- <section class="charts-row">
                 <div class="card chart-medium">
                     <div class="card-header">
                         <h3><i class="fas fa-chart-line"></i> Performance Trend</h3>
@@ -199,7 +199,7 @@
                         <canvas id="roiChart"></canvas>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 3. Campaign Performance Comparison -->
             <section class="campaign-comparison">
