--- a/public/index.html
+++ b/public/index.html
@@ -462,13 +462,13 @@
                             <h3 id="campTotalClicks">0</h3>
                         </div>
                     </div>
-                    <div class="kpi-card">
+                    <!-- <div class="kpi-card">
                         <div class="icon-box indigo"><i class="fas fa-chart-line"></i></div>
                         <div class="kpi-info">
                             <p>Average ROAS</p>
                             <h3 id="campAvgROAS">0x</h3>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="kpi-card">
                         <div class="icon-box amber"><i class="fas fa-bullseye"></i></div>
                         <div class="kpi-info">
@@ -479,19 +479,19 @@
                 </section>
 
                 <!-- Campaign Performance Comparison -->
-                <section class="campaign-comparison">
+                <!-- <section class="campaign-comparison">
                     <div class="card full-width">
                         <div class="card-header space-between">
                             <h3><i class="fas fa-balance-scale"></i> Campaign Performance Comparison</h3>
                         </div>
                         <div class="campaign-grid" id="campaignWiseGrid">
-                            <!-- JS Injected -->
+                            
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Campaign Charts -->
-                <section class="charts-row">
+                <!-- <section class="charts-row">
                     <div class="card chart-medium">
                         <div class="card-header">
                             <h3><i class="fas fa-chart-pie"></i> Campaign Spend Distribution</h3>
@@ -508,10 +508,10 @@
                             <canvas id="campaignROIChart"></canvas>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Performance Trend -->
-                <section class="charts-row">
+                <!-- <section class="charts-row">
                     <div class="card chart-large">
                         <div class="card-header">
                             <h3><i class="fas fa-chart-line"></i> Performance Trend</h3>
@@ -520,19 +520,19 @@
                             <canvas id="campaignPerformanceChart"></canvas>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- AI Insights - Campaign Wise -->
-                <section class="insights-row">
+                <!-- <section class="insights-row">
                     <div class="card full-width">
                         <div class="card-header">
                             <h3><i class="fas fa-brain"></i> AI Campaign Performance Analysis & Recommendations</h3>
                         </div>
                         <div class="insights-container" id="campaignAiInsights">
-                            <!-- JS Injected Content -->
+                            
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Campaign Performance Table -->
                 <section class="table-row">
